# durapack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPORT-COMPLIANCE.md  FAQ.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE-MIT  PROJECT_SUMMARY.md  QUICKSTART.md  TEST_VECTORS_SUMMARY.md  lcov.info  readme.md
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: audit.yml  ci.yml  windows-cli-smoke.yml
docs/: FORMAL_SPEC.md  spec.md
durapack-cli/: Cargo.toml
durapack-cli/src/: lib.rs  main.rs
durapack-cli/src/commands/: fec.rs  mod.rs  pack.rs  scan.rs  timeline.rs  verify.rs
durapack-cli/tests/: pack_tests.rs  scan_tests.rs  timeline_tests.rs  verify_tests.rs
durapack-core/: Cargo.toml
durapack-core/benches/: encoding.rs  fec.rs  scanner.rs
durapack-core/src/: constants.rs  decoder.rs  encoder.rs  error.rs  fec.rs  interleave.rs  lib.rs  linker.rs  scanner.rs  types.rs
durapack-core/tests/: integration_test.rs  proptest.rs  test_vectors.rs
durapack-fuzz/: Cargo.toml
durapack-fuzz/src/: lib.rs
examples/: basic_encode.rs  damaged_recovery.rs
scripts/: README.md  test-cli.ps1
test_vectors/: 01_minimal_frame.md  02_frame_with_crc32c.md  03_frame_with_blake3.md  04_linked_sequence.md  05_truncated_frame.md  06_bit_flip_error.md  07_burst_error.md  08_inserted_garbage.md  09_deleted_bytes.md  10_swapped_frames.md  11_wrong_checksum.md  12_duplicate_frames.md  13_reordered_frames.md  README.md
