[package]
name = "durapack-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for Durapack frame manipulation"

[[bin]]
name = "durapack"
path = "src/main.rs"

[lib]
name = "durapack_cli"
path = "src/lib.rs"

[dependencies]
durapack-core = { path = "../durapack-core", default-features = true, features = [] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex = "0.4"
indicatif = "0.17"
colored = "2.1"
ed25519-dalek = { version = "2", optional = true, default-features = false, features = ["alloc"] }

[features]
default = []
fec-rs = ["durapack-core/fec-rs"]
ed25519-signatures = ["durapack-core/ed25519-signatures", "ed25519-dalek"]

[dev-dependencies]
tempfile = "3.8"
