[package]
name = "durapack-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Durapack self-locating framing format"

[dependencies]
serde.workspace = true
thiserror.workspace = true
blake3.workspace = true
bytes.workspace = true
crc32c.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
hex = "0.4"

[features]
default = ["logging"]
logging = ["tracing"]

[[example]]
name = "basic_encode"
path = "../examples/basic_encode.rs"

[[example]]
name = "damaged_recovery"
path = "../examples/damaged_recovery.rs"

[[bench]]
name = "encoding"
harness = false

