[package]
name = "durapack-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Durapack self-locating framing format"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "1.0", optional = true }
blake3 = { version = "1.5", default-features = false }
bytes = { version = "1.10.1", default-features = false }
crc32c = { version = "0.6", default-features = false }
tracing = { workspace = true, optional = true }
memchr = { version = "2", default-features = false }
hashbrown = { version = "0.14", default-features = false }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
hex = "0.4"
rand = "0.8"

[features]
# Default to std for convenient I/O and collections
default = ["std", "logging"]
# std enables dependent crates' std features
std = [
  "blake3/std",
  "thiserror",
]
# logging uses tracing; tracing works in no_std with core support
logging = ["tracing"]

[[example]]
name = "basic_encode"
path = "../examples/basic_encode.rs"

[[example]]
name = "damaged_recovery"
path = "../examples/damaged_recovery.rs"

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "scanner"
harness = false
